[package]
name = "task-manager"
version = "0.1.0"
edition = "2024"
description = "A CLI task management tool for LLM agent workflows"
license = "MIT"
repository = "https://github.com/aravindvaddi/task-manager"

[[bin]]
name = "task-manager"
path = "src/main.rs"

[[bin]]
name = "tm"
path = "src/tm.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
dirs = "6"
